--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,20 +1,29 @@
 .hidden {
-	display: none;
+    display: none;
 }
+
+.auth-hidden {
+    display: none;
+}
+
 label {
-	margin-bottom: 2px;
-	display: block;
+    margin-bottom: 2px;
+    display: block;
 }
 
 .navbar {
-	min-height: 115px;
+    min-height: 115px;
 }
 
 button {
-	min-width: 150px;
+    min-width: 150px;
 }
 
 pre,
 code {
-	white-space: pre-wrap;
+    white-space: pre-wrap;
+}
+
+#challenge2Section {
+    scroll-margin-top: 150px;
 }
